--- a/stkOverflow/package.json
+++ b/stkOverflow/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios --simulator='iPhone 11 Pro'",
+    "compile": "tsc -p . --pretty",
     "compile:dev": "npm run compile -- -w",
     "start": "react-native start",
     "start:dev": "concurrently -r 'npm run compile:dev' 'npm run start'",
