--- a/stkOverflow/ios/Podfile
+++ b/stkOverflow/ios/Podfile
@@ -1,5 +1,6 @@
 require_relative '../node_modules/react-native/scripts/react_native_pods'
 require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
+node_modules_path = '../node_modules'
 
 platform :ios, '11.0'
 
@@ -11,6 +12,8 @@ target 'stkOverflow' do
     # to enable hermes on iOS, change `false` to `true` and then install pods
     :hermes_enabled => false
   )
+
+  # pod 'RNCSafeAreaProvider', :path => "#{node_modules_path}/react-native-safe-area-context/ios"
 
   target 'stkOverflowTests' do
     inherit! :complete
