--- a/stkOverflow/package.json
+++ b/stkOverflow/package.json
@@ -13,6 +13,9 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-navigation/native": "^5.8.0",
+    "@react-navigation/stack": "^5.9.3",
+    "lodash": "^4.17.21",
     "react": "17.0.2",
     "react-native": "0.66.4"
   },
@@ -21,6 +24,7 @@
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
     "@types/jest": "^26.0.23",
+    "@types/lodash": "^4.14.179",
     "@types/react-native": "^0.66.15",
     "@types/react-test-renderer": "^17.0.1",
     "@typescript-eslint/eslint-plugin": "^5.7.0",
