--- a/stkOverflow/package.json
+++ b/stkOverflow/package.json
@@ -8,6 +8,7 @@
     "compile": "tsc -p . --pretty",
     "compile:dev": "npm run compile -- -w",
     "start": "react-native start",
+    "start:reset": "npm run start -- --reset-cache",
     "start:dev": "concurrently -r 'npm run compile:dev' 'npm run start'",
     "test": "jest",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
@@ -16,8 +17,6 @@
     "lodash": "^4.17.21",
     "react": "17.0.2",
     "react-native": "0.66.4",
-    "react-native-gesture-handler": "^2.3.0",
-    "react-native-modalize-webview": "^1.0.0",
     "react-native-webview": "^11.17.2"
   },
   "devDependencies": {
