--- a/stkOverflow/package.json
+++ b/stkOverflow/package.json
@@ -14,6 +14,7 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "html-entities": "^2.3.2",
     "lodash": "^4.17.21",
     "react": "17.0.2",
     "react-native": "0.66.4",
